--- a/app/index.static.jade
+++ b/app/index.static.jade
@@ -208,6 +208,7 @@ body
               | 01
             =" "
             span.section3__counter-min
+          .section3-slider__arrows
     .section.section4
       .container
         .section__title.section4__title
