--- a/app/stylesheets/sections/_section3.scss
+++ b/app/stylesheets/sections/_section3.scss
@@ -144,11 +144,20 @@
   width: 29px;
   height: 29px;
   padding: 0;
+  margin-right: 179px;
 
+  color: #ffffff;
+  font-size: 16px;
   background: #accc3d;
+  cursor: pointer;
 
   border: none;
   box-shadow: none;
+
+  &:hover {
+    box-shadow: none;
+    background: #ffffff;
+  }
 }
 
 .section3-btn-next {
@@ -159,13 +168,20 @@
   height: 29px;
   width: 29px;
   padding: 0;
+
+  color: #ffffff;
+  font-size: 16px;
   background: #accc3d;
+  cursor: pointer;
 
   border: none;
   box-shadow: none;
+
+   &:hover {
+    box-shadow: none;
+    background: #ffffff;
+  }
 }
-
-
 
 .section3-btn-next-arrow {
   position: absolute;
@@ -187,9 +203,22 @@
   background: url(../images/arrow-left.png) no-repeat center;
 }
 
+.section3-btn-next-text {
+  position: absolute;
+  top: 2px;
+  left: -74px;
+}
+
+.section3-btn-prev-text {
+  position: absolute;
+  top: 2px;
+  right: -73px;
+}
+
 .section3__counter {
   position: relative;
   margin-right: 30px;
+  margin-bottom: 45px;
 
   display: inline-block;
   vertical-align: top;
