--- a/app/stylesheets/sections/_section9.scss
+++ b/app/stylesheets/sections/_section9.scss
@@ -34,6 +34,7 @@
   min-height: 382px;
   padding-left: 65px;
   padding-top: 48px;
+  padding-bottom: 30px;
 
   background-color: #ffffff;
 
@@ -80,7 +81,19 @@
   margin-right: 30px;
 
   display: inline-block;
-  padding-top: 170px;
+  padding-top: 155px;
+}
+
+.section9__btn {
+  display: inline-block;
+}
+
+
+.section9-slider__arrows {
+  position: absolute;
+  bottom: -80px;
+
+  width: 237px;
 }
 
 .section9__counter-big {
@@ -92,7 +105,7 @@
 .section9__counter-min {
   position: absolute;
   right: -70px;
-  bottom: 70px;
+  bottom: 35px;
 
   font-family: Intro;
   font-size: 36.2px;
