--- a/app/index.static.jade
+++ b/app/index.static.jade
@@ -585,7 +585,7 @@ body
           | Благодарим за отзыв!
         .popup__text.popup__success-text.popup__success-text-review
           | Нам очень важна обратная связь клиентов. Ваш отзыв будет опубликован!
-  .popup__slider
+  .popup__slider.hidden
     .overlay
       .popup__container.popup__container-slider
         .popup__btn-close.popup__btn-close-slider
