--- a/app/stylesheets/components/_btn.scss
+++ b/app/stylesheets/components/_btn.scss
@@ -17,3 +17,25 @@
     box-shadow: 0 4px 0 0 #63771e, inset 0 -8px 40px 0 #63771e;
   }
 }
+
+@media (max-width: 1368px) {
+  .btn {
+  display: inline-block;
+  padding: 14px 50px;
+
+  border-radius: 27.5px;
+  background-color: #accc3d;
+
+  box-shadow: 0 4px 0 0 #63771e;
+
+  font-family: Roboto;
+  font-size: 15px;
+  font-weight: 500;
+  line-height: 1.33;
+  color: #030206;
+
+  &:hover {
+    box-shadow: 0 4px 0 0 #63771e, inset 0 -8px 40px 0 #63771e;
+  }
+}
+}
