--- a/app/index.static.jade
+++ b/app/index.static.jade
@@ -585,10 +585,11 @@ body
           | Благодарим за отзыв!
         .popup__text.popup__success-text.popup__success-text-review
           | Нам очень важна обратная связь клиентов. Ваш отзыв будет опубликован!
-  .popup__slider.hidden
+  .popup__slider
     .overlay
       .popup__container.popup__container-slider
         .popup__btn-close.popup__btn-close-slider
+        .button-go-to
         .popup__slids
           .popup__slid.popup__slid-1
             .popup__slider-title
