--- a/app/stylesheets/app.scss
+++ b/app/stylesheets/app.scss
@@ -3,6 +3,7 @@
 @import 'tools/_slick-theme';
 @import 'tools/_settings';
 @import 'tools/_jquery.fullPage';
+@import 'tools/_fancybox';
 
 
 @import 'components/_btn';
@@ -18,4 +19,4 @@
 @import 'sections/_section8';
 @import 'sections/_section9';
 @import 'sections/_section10';
-@import 'sections/_popups'
+@import 'sections/_popups';
