--- a/app/stylesheets/sections/_page-header.scss
+++ b/app/stylesheets/sections/_page-header.scss
@@ -11,18 +11,34 @@
 
 .main-nav {
   position: fixed;
+  z-index: 40;
   top: 0;
   right: 0;
 
-  max-width: 691px;
+  max-width: 35.9%;
   width: 100%;
   height: 100vh;
   padding-top: 145px;
   padding-left: 150px;
 
-  background: #000000;
+  box-shadow: -3.5px 3.5px 13.8px 1.2px rgba(0, 0, 0, 0.8);
+}
 
-  box-shadow: -3.5px 3.5px 13.8px 1.2px rgba(0, 0, 0, 0.4);
+.main-nav__blur {
+  z-index: 30;
+
+  position: fixed;
+  top: 0;
+  right: 0;
+
+  max-width: 35.9%;
+  width: 100%;
+  height: 100vh;
+  padding-top: 145px;
+  padding-left: 150px;
+
+  background: rgba(255,255,255,0.5);
+  filter: blur(5px);
 }
 
 .main-nav ul {
