--- a/app/stylesheets/tools/_jquery.fullPage.scss
+++ b/app/stylesheets/tools/_jquery.fullPage.scss
@@ -142,7 +142,7 @@ html.fp-enabled,
     display: block;
     width: 14px;
     height: 13px;
-    margin: 7px;
+    margin: 19px;
     position:relative;
 }
 .fp-slidesNav ul li {
@@ -162,23 +162,24 @@ html.fp-enabled,
 .fp-slidesNav ul li a.active span,
 #fp-nav ul li:hover a.active span,
 .fp-slidesNav ul li:hover a.active span{
-    height: 12px;
-    width: 12px;
-    margin: -6px 0 0 -6px;
+    height: 15px;
+    width: 15px;
+    margin: -3px 0 0 -3px;
     border-radius: 100%;
+    background-color: #accc3d;
  }
 #fp-nav ul li a span,
 .fp-slidesNav ul li a span {
     border-radius: 50%;
     position: absolute;
     z-index: 1;
-    height: 4px;
-    width: 4px;
+    height: 10px;
+    width: 10px;
     border: 0;
-    background: #333;
+    background: #6f6f6f;
     left: 50%;
     top: 50%;
-    margin: -2px 0 0 -2px;
+    //margin: -2px 0 0 -2px;
     -webkit-transition: all 0.1s ease-in-out;
     -moz-transition: all 0.1s ease-in-out;
     -o-transition: all 0.1s ease-in-out;
@@ -186,9 +187,9 @@ html.fp-enabled,
 }
 #fp-nav ul li:hover a span,
 .fp-slidesNav ul li:hover a span{
-    width: 10px;
-    height: 10px;
-    margin: -5px 0px 0px -5px;
+    width: 12px;
+    height: 12px;
+    margin: -1px 0px 0px -1px;
 }
 #fp-nav ul li .fp-tooltip {
     position: absolute;
